force-app/main/default/objects/SBQQ__Subscription__c/SBQQ__Subscription__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__SubscriptionHelp</customHelpPage>
    <description>Subscription to a product or service currently or previously owned by a customer.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000000}</displayFormat>
        <label>Subscription #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>