force-app/main/default/objects/SBQQ__Subscription__c/fields/BillingMode__c.field-meta.xml
<CustomField>
    <fullName>BillingMode__c</fullName>
    <description>la modalità di fatturazione legata al dato record di product option</description>
    <label>Modalita di Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillingModeVAS</valueSetName>
    </valueSet>
</CustomField>