force-app/main/default/objects/SBQQ__Subscription__c/fields/ConsumptionAnnual__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionAnnual__c</fullName>
    <description>Il Consumo Annuo legato al Subscription</description>
    <label>Consumo Annuo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>