force-app/main/default/objects/SBQQ__Subscription__c/fields/ConsumptionRangeEE__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeEE__c</fullName>
    <description>Campo di configurazione usato per indicare la fascia di Consumo EE per il record di criterio nella funzionalità di Configurazione Offerta Tecnica.</description>
    <label>Fasce Consumo EE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>