force-app/main/default/objects/SBQQ__Subscription__c/fields/ContinuityChangeOffer__c.field-meta.xml
<CustomField>
    <fullName>ContinuityChangeOffer__c</fullName>
    <description>Continuita Cambio Offerta</description>
    <formula>SBQQ__Product__r.ContinuityChangeOffer__c</formula>
    <label>Continuita Cambio Offerta</label>
    <type>Checkbox</type>
</CustomField>