force-app/main/default/objects/SBQQ__Subscription__c/fields/CustomerMarking__c.field-meta.xml
<CustomField>
    <fullName>CustomerMarking__c</fullName>
    <description>la marcatura cliente associata al dato record di product option</description>
    <label>Marcatura Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerMarking</valueSetName>
    </valueSet>
</CustomField>