force-app/main/default/objects/SBQQ__Subscription__c/fields/DiscountEurMWh__c.field-meta.xml
<CustomField>
    <fullName>DiscountEurMWh__c</fullName>
    <description>Sconto applicato per Euro per ogni MWh</description>
    <label>Sconto (Eur/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>