force-app/main/default/objects/SBQQ__Subscription__c/fields/DurationDayGas__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGas__c</fullName>
    <description>La durata de prodotto in gg.</description>
    <label>Durata Gas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>