force-app/main/default/objects/SBQQ__Subscription__c/fields/GlobalMigrationKey__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Generato in fase di migrazione</description>
    <externalId>true</externalId>
    <label>Chiave globale di migrazione</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>