force-app/main/default/objects/SBQQ__Subscription__c/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <description>IVA</description>
    <formula>SBQQ__Product__r.IVA__c</formula>
    <label>IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>