force-app/main/default/objects/SBQQ__Subscription__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lo user associato al dato record di product option</description>
    <label>Login</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>