force-app/main/default/objects/SBQQ__Subscription__c/fields/MaximumKITNumber__c.field-meta.xml
<CustomField>
    <fullName>MaximumKITNumber__c</fullName>
    <description>Maximum KIT Number</description>
    <label>Numero KIT Massimo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>