force-app/main/default/objects/SBQQ__Subscription__c/fields/MeterType__c.field-meta.xml
<CustomField>
    <fullName>MeterType__c</fullName>
    <description>Tipo Apparecchiatura.</description>
    <label>Tipo Apparecchiatura</label>
    <length>30</length>
    <type>Text</type>
</CustomField>