force-app/main/default/objects/SBQQ__Subscription__c/fields/MonthsOccupation__c.field-meta.xml
<CustomField>
    <fullName>MonthsOccupation__c</fullName>
    <label>Mesi Occupazione</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>