force-app/main/default/objects/SBQQ__Subscription__c/fields/MonthsOccupYear__c.field-meta.xml
<CustomField>
    <fullName>MonthsOccupYear__c</fullName>
    <label>Mesi di occupazione nell&apos;anno</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>