force-app/main/default/objects/SBQQ__Subscription__c/fields/OccupantsNumber__c.field-meta.xml
<CustomField>
    <fullName>OccupantsNumber__c</fullName>
    <description>Il numero Occupanti legato al dato record di subscription</description>
    <label>Numero Occupanti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>