force-app/main/default/objects/SBQQ__Subscription__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <description>la modalità di pagamento associata al dato record di prodotto opzione</description>
    <label>Modalita di Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To define</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>