force-app/main/default/objects/SBQQ__Subscription__c/fields/PDRCode__c.field-meta.xml
<CustomField>
    <fullName>PDRCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Il codice PDR associato al dato record di subscription</description>
    <label>Codice PDR</label>
    <referenceTo>SaleServiceItem__c</referenceTo>
    <relationshipLabel>Subscriptions (Codice PDR)</relationshipLabel>
    <relationshipName>PDRSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>