force-app/main/default/objects/SBQQ__Subscription__c/fields/PercentageF2__c.field-meta.xml
<CustomField>
    <fullName>PercentageF2__c</fullName>
    <description>Percentuale consumo fascia F2.</description>
    <label>Percentuale F2</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>