force-app/main/default/objects/SBQQ__Subscription__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Prezzo</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>