force-app/main/default/objects/SBQQ__Subscription__c/fields/PriceF0__c.field-meta.xml
<CustomField>
    <fullName>PriceF0__c</fullName>
    <description>Prezzo F0</description>
    <formula>SBQQ__Product__r.PriceF0__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo F0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>