force-app/main/default/objects/SBQQ__Subscription__c/fields/PriceF1__c.field-meta.xml
<CustomField>
    <fullName>PriceF1__c</fullName>
    <description>Prezzo F1</description>
    <formula>SBQQ__Product__r.PriceF1__c</formula>
    <label>Prezzo F1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>