force-app/main/default/objects/SBQQ__Subscription__c/fields/PriceF3__c.field-meta.xml
<CustomField>
    <fullName>PriceF3__c</fullName>
    <description>Prezzo F3</description>
    <formula>SBQQ__Product__r.PriceF3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo F3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>