force-app/main/default/objects/SBQQ__Subscription__c/fields/PriceNetDiscounted__c.field-meta.xml
<CustomField>
    <fullName>PriceNetDiscounted__c</fullName>
    <formula>SBQQ__Product__r.PriceDiscounted__c</formula>
    <label>Prezzo Netto Scontato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>