force-app/main/default/objects/SBQQ__Subscription__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>SBQQ__Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Prodotto</label>
    <type>Text</type>
</CustomField>