force-app/main/default/objects/SBQQ__Subscription__c/fields/QuoteIDCustom__c.field-meta.xml
<CustomField>
    <fullName>QuoteIDCustom__c</fullName>
    <label>ID Custom Quota</label>
    <length>18</length>
    <type>Text</type>
</CustomField>