force-app/main/default/objects/SBQQ__Subscription__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linea Quota</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>