force-app/main/default/objects/SBQQ__Subscription__c/fields/Reading__c.field-meta.xml
<CustomField>
    <fullName>Reading__c</fullName>
    <label>Lettura</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>