force-app/main/default/objects/SBQQ__Subscription__c/fields/ReasonSuspension__c.field-meta.xml
<CustomField>
    <fullName>ReasonSuspension__c</fullName>
    <label>Motivo Sospensione</label>
    <length>40</length>
    <type>Text</type>
</CustomField>