force-app/main/default/objects/SBQQ__Subscription__c/fields/ResidentDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>ResidentDeliveryAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag che indica se il dato record di Product deve essere legato all&apos;indirizzo di residenza della fornitura</description>
    <label>Residente Indirizzo di Fornitura</label>
    <type>Checkbox</type>
</CustomField>