force-app/main/default/objects/SBQQ__Subscription__c/fields/ReturnSafeGuardData__c.field-meta.xml
<CustomField>
    <fullName>ReturnSafeGuardData__c</fullName>
    <description>La Data di Ritorno Salvaguardia</description>
    <label>Data Ritorno Salvaguardia</label>
    <type>Date</type>
</CustomField>