force-app/main/default/objects/SBQQ__Subscription__c/fields/SAPContractCode__c.field-meta.xml
<CustomField>
    <fullName>SAPContractCode__c</fullName>
    <formula>SBQQ__Contract__r.SAPContractCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codice Contratto SAP</label>
    <type>Text</type>
</CustomField>