force-app/main/default/objects/SBQQ__Subscription__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Service__c)</formula>
    <label>Servizio</label>
    <type>Text</type>
</CustomField>