force-app/main/default/objects/SBQQ__Subscription__c/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con il punto di fornitura</description>
    <label>Service Point</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>