force-app/main/default/objects/SBQQ__Subscription__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <description>la superficie in MQ legata al dato record di subscription</description>
    <label>Superfice MQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>