force-app/main/default/objects/SBQQ__Subscription__c/fields/TextInPrint__c.field-meta.xml
<CustomField>
    <fullName>TextInPrint__c</fullName>
    <description>Testo in stampa.</description>
    <label>Testo In Stampa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>