force-app/main/default/objects/SBQQ__Subscription__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <description>La tipologia di product option.</description>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ProductTypology</valueSetName>
    </valueSet>
</CustomField>