force-app/main/default/objects/SBQQ__Subscription__c/fields/UseCategory__c.field-meta.xml
<CustomField>
    <fullName>UseCategory__c</fullName>
    <label>Categoria Uso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To define</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>