force-app/main/default/objects/SBQQ__Subscription__c/fields/VASBillingMode__c.field-meta.xml
<CustomField>
    <fullName>VASBillingMode__c</fullName>
    <description>Modalità di Fatturazione VAS</description>
    <label>Modalità di Fatturazione VAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To define</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>