force-app/main/default/objects/SBQQ__Subscription__c/fields/VasDuration__c.field-meta.xml
<CustomField>
    <fullName>VasDuration__c</fullName>
    <description>VAS - Durata</description>
    <formula>SBQQ__Product__r.DurationVAS__c</formula>
    <label>VAS - Durata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>