force-app/main/default/objects/SBQQ__Subscription__c/fields/VasEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>VasEffectiveDate__c</fullName>
    <label>Data Decorrenza VAS</label>
    <type>Date</type>
</CustomField>