force-app/main/default/objects/SBQQ__Subscription__c/fields/VasPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>VasPolicyNumber__c</fullName>
    <label>Numero Polizza VAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>