force-app/main/default/objects/SBQQ__Subscription__c/fields/VasPracticeDate__c.field-meta.xml
<CustomField>
    <fullName>VasPracticeDate__c</fullName>
    <label>Data inserimento ordine</label>
    <type>Date</type>
</CustomField>