force-app/main/default/objects/SBQQ__Subscription__c/fields/VasServiceActivationDate__c.field-meta.xml
<CustomField>
    <fullName>VasServiceActivationDate__c</fullName>
    <label>Data attivazione servizio</label>
    <type>Date</type>
</CustomField>