force-app/main/default/objects/SBQQ__Subscription__c/fields/VersionFormula__c.field-meta.xml
<CustomField>
    <fullName>VersionFormula__c</fullName>
    <formula>SBQQ__Product__r.Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Versione Prodotto</label>
    <type>Text</type>
</CustomField>